homepage links update

--- a/index.html
+++ b/index.html
@@ -140,12 +140,25 @@ section h2 {
 <h2>Community Links</h2>
 
 <ul>
-<li><a href="https://wikiwiki.jp/live-a-hero/">LAH Japanese Wiki</a></li>
-<li><a href="https://liveahero-community.github.io/">LAH Chinese Database</a></li>
-<li><a href="https://www.reddit.com/r/LiveAHero/">LAH Subreddit</a></li>
-<li><a href="https://discord.gg/zpc7PCk">LAH Discord (Herocord)</a></li>
-<li><a href="https://rongjie-alter.github.io/lah-tiermaker/">Character Tier Maker</a></li>
-<li><a href="https://housamosummaries.blogspot.com/">Fan Translation Summaries</a></li>
+<li><b>Wiki Projects</b></li>
+    <ul>
+    <li><a href="https://wikiwiki.jp/live-a-hero/">LAH Japanese Wiki</a></li>
+    <li><a href="https://liveahero-community.github.io/">LAH Chinese Database</a></li>
+    </ul>
+<li><b>Community</b></li>
+    <ul>
+    <li><a href="https://discord.gg/zpc7PCk">LAH Discord (Herocord)</a></li>
+    <li><a href="https://www.reddit.com/r/LiveAHero/">LAH Subreddit</a></li>
+    </ul>
+<li><b>Tools</b></li>
+    <ul>
+    <li><a href="https://rongjie-alter.github.io/lah-tiermaker/">Character Tier Maker</a></li>
+    </ul>
+<li><b>Fan Translations</b></li>
+    <ul>
+    <li><a href="https://housamosummaries.blogspot.com/">Fan Translation Summaries (by @Roureem)</a></li>
+    <li><a href="https://passzx.github.io/tl_project/index.html">Fan Translation (by @Passzx)</a></li>
+    </ul>
 </ul>
 </section>
 
