Fix event image resize

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ section h2 {
 {% assign event_start_date = event.event_start_time | date: "%s" | plus: 0 %}
 {% if event.timed_bomb == true and event_start_date > current_date %}{% continue %}{% endif %}
 {% if event_date >= current_date %}
-<tr><td><img width="600" height="191" style="width: 100%" src="/cdn/Sprite/{{ event.banner_image }}" loading="lazy"></td></tr>
+{% assign banner_image = "/cdn/Sprite/" | append: event.banner_image %}
+<tr><td>{% include image.html path=banner_image style="width: 100%" %}</td></tr>
 <tr><td data-expiry="{{ event.event_end_time }}"><a href="{{ event.url }}">{{ event.title }}</a> ({{ event.event_start_time | date: "%-d %b %Y" }} ~ {{ event.event_end_time | date: "%-d %b %Y" }})</td></tr>
 {% endif %}
 {% endfor %}
