--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@ banner: true
 section {
     border: 1px solid;
     padding: 10px;
-    background: #d3f8eb;
+    background: var(--sectionBg);
 }
 section h2 {
     padding: 10px;
     margin: 0 0 10px;
-    background: rgb(94 203 140);
+    background: var(--sectionHeader);
     text-align: center;
     font-size: 16px;
 }
