--- a/illustrators.html
+++ b/illustrators.html
@@ -31,7 +31,7 @@ banner: true
 {% if illustrator.twitter or illustrator.pixiv %}
 <ul>
 {% if illustrator.twitter %}<li>X/Twitter: <a href="https://x.com/{{ illustrator.twitter }}">@{{ illustrator.twitter }}</a></li>{% endif %}
-{% if illustrator.pixiv %}<li>Pixiv: <a href="https://pixiv.com/en/users/{{ illustrator.pixiv }}">{{ illustrator.pixiv }}</a></li>{% endif %}
+{% if illustrator.pixiv %}<li>Pixiv: <a href="https://pixiv.net/en/users/{{ illustrator.pixiv }}">{{ illustrator.pixiv }}</a></li>{% endif %}
 </ul>
 {% endif %}
 
