--- a/items.html
+++ b/items.html
@@ -15,6 +15,7 @@ banner: true
 {% assign id = pair[0] %}
 {% assign iid = id | plus: 0 %}
 {% if iid > 100000 and iid < 10000000 %}{% continue %}{% endif %}
+{% if iid >= 20000000 and iid < 30000000 %}{% continue %}{% endif %}
 <tr><td>{{ id }}</td><td>{% include item.html id=iid %}</td></tr>
 {% endfor %}
 </table>
